// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductSlider should render nothing 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Connect(ProductSlider)
    products={Array []}
  >
    <ProductSlider
      autoPlay={false}
      dispatch={[Function]}
      headline={null}
      isCartPage={false}
      isProductPage={false}
      products={Array []}
      showMore={false}
      showMoreUrl={null}
    />
  </Connect(ProductSlider)>
</Provider>
`;

exports[`ProductSlider should render slider 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Connect(ProductSlider)
    isCartPage={true}
    products={
      Array [
        Object {
          "featuredImageUrl": "https://example.com/1",
          "id": "1",
          "name": "1",
        },
        Object {
          "featuredImageUrl": "https://example.com/2",
          "id": "2",
          "name": "2",
        },
      ]
    }
    showMore={false}
  >
    <ProductSlider
      autoPlay={false}
      dispatch={[Function]}
      headline={null}
      isCartPage={true}
      isProductPage={false}
      products={
        Array [
          Object {
            "featuredImageUrl": "https://example.com/1",
            "id": "1",
            "name": "1",
          },
          Object {
            "featuredImageUrl": "https://example.com/2",
            "id": "2",
            "name": "2",
          },
        ]
      }
      showMore={false}
      showMoreUrl="/page/recently-viewed"
    />
  </Connect(ProductSlider)>
</Provider>
`;

exports[`ProductSlider should render slider with a show more button 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Connect(ProductSlider)
    isCartPage={true}
    products={
      Array [
        Object {
          "featuredImageUrl": "https://example.com/1",
          "id": "1",
          "name": "1",
        },
        Object {
          "featuredImageUrl": "https://example.com/2",
          "id": "2",
          "name": "2",
        },
      ]
    }
    showMore={true}
  >
    <ProductSlider
      autoPlay={false}
      dispatch={[Function]}
      headline={null}
      isCartPage={true}
      isProductPage={false}
      products={
        Array [
          Object {
            "featuredImageUrl": "https://example.com/1",
            "id": "1",
            "name": "1",
          },
          Object {
            "featuredImageUrl": "https://example.com/2",
            "id": "2",
            "name": "2",
          },
        ]
      }
      showMore={true}
      showMoreUrl="/page/recently-viewed"
    />
  </Connect(ProductSlider)>
</Provider>
`;
